--- a/pages/careers.html
+++ b/pages/careers.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOTI</title>
+    <meta name="description" content=" We’re looking for a Mid-weight Strategist to join the fast-growing strategy team. You’ll be working on shopper/trade/activation focused projects and clients. The work will focus on creative strategies for campaigns & activations that drive conversion ontrade [in bars/pubs and restaurants] and off trade [in the supermarket].">
+    <meta name="description" content="Design agency careers, London design job openings, Barcelona design agency positions, Buenos Aires design career opportunities, Join our creative team, Design agency job vacancies, Multinational design agency careers, Graphic design jobs in London Barcelona Buenos Aires, Creative agency employment, Design agency hiring information">
+    <title>Careers - NOTI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -13,8 +16,8 @@
     <header>
       <nav class="navbar navbar-expand-lg nav_bootstrap">
         <div class="container-fluid bg--dark">
-          <a class="navbar-brand" href="">
-            <img class="btn_logo" src="../img/logo-circle-dark.svg" width="80px">
+          <a class="navbar-brand" href="../index.html">
+            <img class="btn_logo" src="../img/logo-circle-dark.svg" alt="Noti logo N over a circle" width="80px">
           </a>
           <button class="navbar-toggler shadow-none border-0 btn-burger" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <img src="../img/icn-burger-light.svg" width="40px">
@@ -37,32 +40,32 @@
 
       <section class="row careers_main_section1">
         <article class="col-md-12 col-lg-6 careers_main_container_text">
-          <h1 class="h5_careers">CAREERS</h1>
-          <h2 class="h3_careers">WANT TO MAKE DIFFERENT HAPPEN?</h2>
-          <div class="btn--large"><a href="" class="p">Get in touch</a></div>
+          <h1 class="h5_careers" data-aos="fade-up" data-aos-offset="500" data-aos-duration="600">CAREERS</h1>
+          <h2 class="h3_careers" data-aos="fade-up" data-aos-offset="500" data-aos-duration="700">WANT TO MAKE DIFFERENT HAPPEN?</h2>
+          <div class="btn--large" data-aos="fade-up" data-aos-offset="200" data-aos-duration="900"><a href="./contact.html" class="p--btn">Get in touch</a></div>
         </article>
-        <article class="col-md-12 col-lg-6 careers_main_container_illustration">
-          <img src="../img/CAREERS-illustration-584x584.png" class="careers_illustration">
+        <article class="col-md-12 col-lg-6 careers_main_container_illustration" data-aos="fade-left">
+          <img src="../img/CAREERS-illustration-584x584.png" class="careers_illustration" alt="image showing a colaborative team working on a table">
         </article>
       </section>
 
       <section class="row careers_main_section2">
 
-        <article class="col-lg-12 col-xl-3 about_main_section_heading">
+        <article class="col-lg-12 col-xl-3 about_main_section_heading" data-aos="fade-right">
           <h3 class="h5_about text-light">OPEN<br>POSITIONS</h3>
           <img class="arrow_side_2"src="../img/subheadings_arrow_light.svg" width="80%">
           <img class="arrow_down_2" src="../img/subheadings_arrow_down_light.svg" height="70%">
         </article>
 
-        <acticle class="col-lg-12 col-xl-9">
+        <acticle class="col-lg-12 col-xl-9" data-aos="fade-up">
           <div class="careers_main_section2_row2 accordion" id="accordionExample">
 
             <div class="accordion-item">
-              <h2 class="accordion-header open">
+              <h4 class="accordion-header open">
                 <button class="accordion-button p_work text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Mid-Weight Strategist 
                 </button>
-              </h2>
+              </h4>
               <div id="collapseOne" class="accordion-collapse collapsed p_careers" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   We’re looking for a Mid-weight Strategist to join the fast-growing strategy team. You’ll be working on shopper/trade/activation focused projects and clients. The work will focus on creative strategies for campaigns & activations that drive conversion ontrade [in bars/pubs and restaurants] and off trade [in the supermarket].
@@ -72,11 +75,11 @@
             </div>
 
             <div class="accordion-item">
-              <h2 class="accordion-header">
+              <h4 class="accordion-header">
                 <button class="accordion-button collapsed p_work text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   Freelance MW Designer
                 </button>
-              </h2>
+              </h4>
               <div id="collapseTwo" class="collapse p_careers" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   Starting in September, 2 days onsite London, 3 remote. Must haves: approx 2-6yrs experience reputable creative agency, integrated experience, roficient in Sketch, Adobe XD & Figma, comfortable creating look/feel for decks + working across print/digital/brand.
@@ -86,11 +89,11 @@
             </div>
 
             <div class="accordion-item">
-              <h2 class="accordion-header">
+              <h4 class="accordion-header">
                 <button class="accordion-button collapsed p_work text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   UI/UX Web Designer
                 </button>
-              </h2>
+              </h4>
               <div id="collapseThree" class="collapse p_careers" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                 We are seeking a UI/UX Web Designer to work closely with our CTO, the role will be split with an 80% bias towards design and UI/UX in Figma or similar on the design and build of websites. The remaining 20% will be predominantly focused on developing and implementing new digital initiatives, web building and leading us into a new digital design arena. 
@@ -103,7 +106,7 @@
         </article>
       </section>
 
-      <section class="row careers_main_section3">
+      <section class="row careers_main_section3" data-aos="fade-right">
         <div class="careers_main_section3_container">
           <h4 class="h4_about text-light left_align">Noti is proud to</h4>
           <h4 class="h4_about text-light">have <span class = "span_underline">100%</span> gender pay</h4>
@@ -114,11 +117,12 @@
     </main>
   
     <footer class="container-fluid">
-      <section class="row">
+      <section class="row justify-content-around">
 
         <article class="col-lg-5 col-xs-10">
           <img class="footer_logo" src="../img/logo.svg">
         </article>
+
         <article class="col-lg-2 col-md-6 col-xs-10 footer_column2">
           <h3 class="h6-footer">Stay connected</h3>
           <div class="footer_socialicons">
@@ -127,6 +131,7 @@
             <a href=""><img class="footer_icn" src="../img/icn-linkedin.svg" width="40px"></a>       
           </div>
         </article>
+
         <article class="col-lg-3 col-md-6 col-xs-10 footer_column3">
           <h3 class="h6-footer">Contact us</h3>
           <div class="footer_contact_frame">
@@ -147,5 +152,9 @@
     </footer>
   </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
