--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Email us to info@noti.com, or give us a call at +4407830669276.">
-    <meta name="keywords" content="design agency contact, London design agency, Barcelona design studio, Buenos Aires creative firm, contact information, get in touch, design services contact, multinational design agency, design consultancy email">
+    <meta name="keywords" content="desig, agency, contact, London, Barcelona, studio, Buenos Aires, firm, contact, information, services, consultancy, email, phone, number, location">
     <title>Contact - NOTI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
