--- a/pages/careers.html
+++ b/pages/careers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" We’re looking for a Mid-weight Strategist to join the fast-growing strategy team. You’ll be working on shopper/trade/activation focused projects and clients. The work will focus on creative strategies for campaigns & activations that drive conversion ontrade [in bars/pubs and restaurants] and off trade [in the supermarket].">
-    <meta name="keywords" content="design agency careers, London design job openings, Barcelona design agency positions, Buenos Aires design career opportunities, join our creative team, design agency job vacancies, multinational design agency careers, graphic design jobs in London, graphic design jobs in Barcelona, graphic design jobs in Buenos Aires, creative agency employment, design agency hiring information">
+    <meta name="keywords" content="design, agency, careers, London, job, openings, Barcelona, positions, Buenos Aires, career, opportunities, creative, vacancies, graphic, employment, hiring">
     <title>Careers - NOTI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
