--- a/pages/work.html
+++ b/pages/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blood, sweat and ideas: new work posted here.">
-    <meta name="keywords" content="design portfolio, creative projects, London design agency work, Barcelona design studio projects, Buenos Aires design agency portfolio, design case studies, multinational design projects, graphic design examples, design agency client work, showcase of our designs">
+    <meta name="keywords" content="design, portfolio, creative, projects, London, agency, work, Barcelona, projects, Buenos Aires, case, studies, graphic, showcase">
     <title>Work - NOTI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
