--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="We believe the world moves too fast for brands to wait around. We work with brands that operate with a healthy dose of impatience to connect themselves with culture, steal attention and grow at speed.">
     <meta name="keywords" content="design, agency, creative, Buenos Aires, London, Barcelona, graphic, innovative, portfolio, services">
     <title>Home - NOTI</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
