--- a/pages/careers.html
+++ b/pages/careers.html
@@ -6,6 +6,7 @@
     <meta name="description" content=" We’re looking for a Mid-weight Strategist to join the fast-growing strategy team. You’ll be working on shopper/trade/activation focused projects and clients. The work will focus on creative strategies for campaigns & activations that drive conversion ontrade [in bars/pubs and restaurants] and off trade [in the supermarket].">
     <meta name="keywords" content="design, agency, careers, London, job, openings, Barcelona, positions, Buenos Aires, career, opportunities, creative, vacancies, graphic, employment, hiring">
     <title>Careers - NOTI</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon"/>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
