--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,7 @@
     <meta name="description" content="What We Do Everyday: whether you're looking for a website that disrupts the digital landscape, an app that pushes boundaries, or a branding campaign that turns heads, our team of talented and rebellious designers will collaborate with you to bring your vision to life.">
     <meta name="keywords" content="creative, design, team, agency, about, mission, values, London, Barcelona, Buenos Aires, culture">
     <title>About - NOTI</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon"/>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
