--- a/pages/work.html
+++ b/pages/work.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Blood, sweat and ideas: new work posted here.">
     <meta name="keywords" content="design, portfolio, creative, projects, London, agency, work, Barcelona, projects, Buenos Aires, case, studies, graphic, showcase">
     <title>Work - NOTI</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon"/>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
