--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
             <img src="../img/icn-burger-dark.svg" alt="burger icon" width="40px">
           </button>
           </button>
-          <div class="collapse navbar-collapse text-center bg--light pb-5" id="menu">
+          <div class="collapse navbar-collapse text-center bg--light" id="menu">
             <ul class="navbar-nav nav-fill w-100">
               <li class="nav-item li_bootstrap"><a class="nav-link li--light" href="../index.html">HOME</a></li>
               <li class="nav-item"><a class="nav-link li--light--active" href="about.html">ABOUT</a></li>
