--- a/pages/work.html
+++ b/pages/work.html
@@ -24,7 +24,7 @@
             <img src="../img/icn-burger-dark.svg" alt="burger icon" width="40px">
           </button>
           </button>
-          <div class="collapse navbar-collapse text-center light_bg pb-5" id="menu">
+          <div class="collapse navbar-collapse text-center light_bg" id="menu">
             <ul class="navbar-nav nav-fill w-100">
               <li class="nav-item li_bootstrap"><a class="nav-link li--light" href="../index.html">HOME</a></li>
               <li class="nav-item"><a class="nav-link li--light" href="about.html">ABOUT</a></li>
