--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./img/icn-burger-light.svg" alt="burger icon" width="40px">
           </button>
           </button>
-          <div class="collapse navbar-collapse text-center dark_bg pb-5" id="menu">
+          <div class="collapse navbar-collapse text-center dark_bg" id="menu">
             <ul class="navbar-nav nav-fill w-100">
               <li class="nav-item li_bootstrap"><a class="nav-link li--dark--active" href="">HOME</a></li>
               <li class="nav-item"><a class="nav-link li--dark" href="./pages/about.html">ABOUT</a></li>
